--- a/server/pom.xml
+++ b/server/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>ru.vsu.csf.g7</groupId>
     <artifactId>server</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
     <packaging>war</packaging>
     <name>server</name>
     <description>server</description>
