--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -7,3 +7,10 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database=postgresql
 spring.jpa.database-platform=org.hibernate.dialect.PostgresPlusDialect
 server.port=8081
+
+
+#
+#Access-Control-Allow-Origin : http://localhost:3000
+#Access-Control-Allow-Credentials : true
+#Access-Control-Allow-Methods : GET, POST, OPTIONS
+#Access-Control-Allow-Headers : Origin, Content-Type, Accept
