--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,11 @@
     "@types/react-dom": "^18.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-intl": "^6.2.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.8.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "axios": "^1.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
