--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -8,8 +8,11 @@ RUN ./mvnw dependency:resolve
 
 COPY . .
 
-CMD ./mvnw clean package -DskipTests
+#CMD ./mvnw clean package -DskipTests
+#CMD echo "Сборка приложения..."
+#CMD ["./mvnw", "clean", "package", "-DskipTests"]
 
-ENTRYPOINT ["java", "-jar", "./target/server-0.0.1.war"]
-
-EXPOSE 8888
+CMD echo "Expose port = " $SPRING_APP_DOCKER_PORT
+EXPOSE $SPRING_APP_DOCKER_PORT
+#ENTRYPOINT ["java", "-jar", "./target/server-0.0.1.war"]
+CMD ./mvnw spring-boot:run
