--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,7 +1,8 @@
 FROM node:16-alpine3.16
 
-WORKDIR .
+WORKDIR /app
 COPY . .
 RUN npm install
 ENTRYPOINT ["npm", "run", "start"]
-EXPOSE 3000
+
+EXPOSE $REACT_APP_DOCKER_PORT
